--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="./js/modal.js" defer></script>
+    <script src="./js/index.js" defer></script>
     <title>3circles</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" >
       <div class="main-title">Project<br>Management<br>Framework</div>
-
-      <div class="content content--goal">
-        <div class="content__title">Цели РП в проектном<br>производстве</div>
-        <div class="content__subtitle">(Что должно быть сделано?)</div>
-      </div>
-      
-      <div class="content content--model">
-        <div class="content__title">Модель<br>компетенций<br>и грейдов</div>
-        <div class="content__subtitle">(Какими компетенциями<br>необходимо обладать?)</div>
-      </div>
-
-      <div class="content content--cycle">
-        <div class="content__title ">Цикл<br>проектного<br>производства</div>
-        <div class="content__subtitle">(Как делать проекты?)</div>
-      </div>
+        <div id="content-wrapper">
+          <div class="content content--goal" data-id="2445312049">
+            <div class="content__title">Цели РП в проектном<br>производстве</div>
+            <div class="content__subtitle">(Что должно быть сделано?)</div>
+          </div>
+  
+        <div class="content content--model" data-id="2466807814">
+          <div class="content__title">Модель<br>компетенций<br>и грейдов</div>
+          <div class="content__subtitle">(Какими компетенциями<br>необходимо обладать?)</div>
+        </div>
+  
+        <div class="content content--cycle" data-id="2380398632">
+          <div class="content__title ">Цикл<br>проектного<br>производства</div>
+          <div class="content__subtitle">(Как делать проекты?)</div>
+        </div>
+        </div>
+        
   </body>
 </html>
